<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
                android:key="lime_preference"
                android:title="LIME Preference"
                android:summary="LIME Preference Configuration">
    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
                android:key="lime_keyboard"
                android:title="@string/keyboard"
                android:summary="">
        <ListPreference
				android:key="keyboard_list"
				android:title="@string/keyboard_list"
				android:entries="@array/keyboard"
				android:entryValues="@array/keyboard_codes"
				android:dialogTitle="@string/keyboard_list" />
        <CheckBoxPreference
                android:key="vibrate_on_keypress"
                android:title="@string/vibrate_on_keypress" />
        <CheckBoxPreference
                android:key="sound_on_keypress"
                android:title="@string/sound_on_keypress"/>
        <CheckBoxPreference
                android:key="display_number_keypads"
                android:title="@string/display_number_keypads"
                android:summary="@string/display_number_keypads_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        		xmlns:android="http://schemas.android.com/apk/res/android"
                android:summary="" android:key="lime_im" android:title="@string/im">
    <ListPreference
    			android:key="default_im_reverselookup"
    			android:title="@string/default_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="0"/>
    <ListPreference
    			android:key="cj_im_reverselookup"
    			android:title="@string/cj_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="0"/>
    <ListPreference
    			android:key="dayi_im_reverselookup"
    			android:title="@string/dayi_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="0"/>
    <ListPreference
    			android:key="bpmf_im_reverselookup"
    			android:title="@string/bpmf_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="0"/>
   
</PreferenceCategory>
    
    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
                android:key="lime_mapping"
                android:title="@string/mapping"
                android:summary="">
        <ListPreference
				android:key="similiar_list"
				android:title="@string/similiar_list"
				android:entries="@array/similiar_codes"
				android:entryValues="@array/similiar_codes"
				android:dialogTitle="@string/similiar_list" />
        <CheckBoxPreference
                android:key="candidate_switch"
                android:title="@string/candidate_switch"
                android:summary="@string/candidate_switch_summary" />
        <CheckBoxPreference
                android:key="candidate_suggestion"
                android:title="@string/candidate_suggestion"
                android:summary="@string/candidate_suggestion_summary" />
        <CheckBoxPreference
                android:key="learning_switch"
                android:title="@string/learning_switch"
                android:summary="@string/learning_switch_summary" />
        <CheckBoxPreference
                android:key="accept_number_index"
                android:title="@string/accept_number_index"
                android:summary="@string/accept_number_index_summary" />
        <CheckBoxPreference
                android:key="accept_symbol_index"
                android:title="@string/accept_symbol_index"
                android:summary="@string/accept_symbol_index_summary" />
        <CheckBoxPreference
                android:key="switch_english_mode"
                android:title="@string/switch_english_mode"
                android:summary="@string/switch_english_mode_summary" />
    </PreferenceCategory>
</PreferenceScreen>

